Still learning and testing. Added an image and some more SCSS. Cool!

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,10 @@
 
 
 
+    <img src="images/23569861-sample-grunge-red-round-stamp.jpg" style="max-width: 400px;">
+
+
+
     <script src='main.js'></script>
 </body>
 </html>
