Directly referencing a .scss file from the .html file (not CSS import)

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='basic.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='more-sass.scss'>
     
 </head>
 <body>
@@ -26,7 +27,7 @@
         </li>
     </ol>
 
-    <p>And damn it's fast!</p>
+    <p class="stright-from-sass">And damn it's fast!</p>
 
     <p>
         If you read the documentation you'll see both "parcel" and "parcel-bunder" packages references.
